--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "social-network-mern",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Ludovicmanga/Social-network-MERN/issues"
   },
-  "homepage": "https://github.com/Ludovicmanga/Social-network-MERN#readme"
+  "homepage": "https://github.com/Ludovicmanga/Social-network-MERN#readme",
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.10",
+    "nodemon": "^2.0.15"
+  }
 }
